@@ -59,11 +59,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>22</source>
+					<source>21</source>
 					<target>21</target>
-					<compilerArgs>
-						<arg>--enable-preview</arg>
-					</compilerArgs>
                 </configuration>
 			</plugin>
 			<plugin>
